--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,13 @@
 
 body {
   font-family: "VT323", monospace;
-
   font-style: normal;
-
   background-color: #000000;
 }
 
 main {
   text-align: center;
+  margin-top: 50px;
 }
 a,
 a:visited,
@@ -28,7 +27,6 @@ p {
 a {
   font-variant: small-caps;
   font-family: "VT323", monospace;
-
   font-style: normal;
 }
 
@@ -42,9 +40,10 @@ strong {
   font-weight: bold;
 }
 
+.hidden {
+  display: none;
+}
 .intro-block {
-  height: 100vh;
-  width: 100vw;
   text-align: center;
   padding-top: 20px;
 }
@@ -53,7 +52,22 @@ strong {
   padding: 0;
   max-width: 200px;
   border-radius: 5px;
-  margin: 0 auto;
+  margin: 20px auto;
+}
+
+.monitor.hidden {
+  display: none;
+}
+
+.monitor.visible {
+  display: block;
+  margin-top: 20px;
+}
+
+.form-error {
+  color: red;
+  font-size: 14px;
+  margin-top: 10px;
 }
 
 .intro-block svg {
@@ -79,14 +93,9 @@ strong {
 .intro-block h1,
 .intro-block h3,
 .intro-block p {
-  width: 450px;
   margin: 0 auto;
   margin-top: 20px;
-}
-
-.intro-block p {
-  width: 450px;
-  margin: 0 auto;
+  font-size: 25px;
 }
 
 @keyframes ekg {
@@ -117,7 +126,7 @@ strong {
 
 .styled-input {
   width: 100%;
-  padding: 10px;
+  padding: 10px 0px;
   border: none;
   background-color: black;
   color: #00ff00;
@@ -143,12 +152,13 @@ strong {
   top: 10px;
   font-family: "VT323", monospace;
   font-size: 23px;
-  font-style: normal;
+  font-style: italic;
   left: 10px;
   width: 100%;
   color: #00ff00;
   pointer-events: none;
   transition: all 0.3s ease;
+  opacity: 0.3;
 }
 
 .styled-input:focus + .floating-label,
@@ -160,11 +170,14 @@ strong {
 }
 
 .form-wrapper {
+  max-width: 450px;
+  margin: auto;
   margin-top: 40px;
+  padding: 0px 24px;
 }
 
 .styled-button {
-  margin-top: 20px;
+  margin-top: 25px;
   padding: 10px 20px;
   background-color: black;
   color: #00ff00;
@@ -193,6 +206,68 @@ strong {
   border-color: #00ff00;
 }
 
+.form-error {
+  margin: 0px 20px;
+  color: red;
+}
+
 ul {
   padding-inline-start: 0px;
+}
+
+/* Caret Style */
+.caret {
+  display: inline-block;
+  width: 1px;
+  height: 1.2em;
+  background-color: black;
+  animation: blink 0.7s steps(1) infinite;
+  color: green;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+
+@keyframes heartbeat {
+  0% {
+    filter: brightness(1);
+  }
+  10% {
+    filter: brightness(2);
+  }
+  20% {
+    filter: brightness(1);
+  }
+  30% {
+    filter: brightness(1.3);
+  }
+  40% {
+    filter: brightness(1);
+  }
+  100% {
+    filter: brightness(1);
+  }
+}
+
+.pulse {
+  animation: heartbeat 1.5s cubic-bezier(0.25, 1.5, 0.5, 1) infinite;
+}
+
+@keyframes flash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.flash {
+  animation: flash 0.5s ease-in-out 3; /* Flash for 3 cycles */
 }
