--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,14 @@ a:focus {
   font-weight: 800;
 }
 
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
 strong {
   font-weight: bold;
 }
@@ -153,31 +161,29 @@ strong {
   font-family: "VT323", monospace;
   font-size: 23px;
   font-style: italic;
-  left: 10px;
+  left: 0px;
   width: 100%;
   color: #00ff00;
   pointer-events: none;
   transition: all 0.3s ease;
-  opacity: 0.3;
+  opacity: 0.7;
 }
 
 .styled-input:focus + .floating-label,
 .styled-input:not(:placeholder-shown) + .floating-label {
   top: -20px;
-  left: 10px;
   font-size: 15px;
   color: #00ff00;
 }
 
 .form-wrapper {
-  max-width: 450px;
+  max-width: 650px;
   margin: auto;
-  margin-top: 40px;
   padding: 0px 24px;
 }
 
 .styled-button {
-  margin-top: 25px;
+  margin-top: 45px;
   padding: 10px 20px;
   background-color: black;
   color: #00ff00;
@@ -270,4 +276,42 @@ ul {
 
 .flash {
   animation: flash 0.5s ease-in-out 3; /* Flash for 3 cycles */
+}
+
+.cmd-footer {
+  color: #00d704;
+}
+
+footer {
+  margin-top: 40px;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 180px;
+  background-color: #000000;
+  color: #00d704;
+  text-align: center;
+  border-radius: 5px;
+  border: 3px solid #00ff00;
+  padding: 5px;
+  margin: 10px;
+  position: absolute;
+  z-index: 1;
+  bottom: 138%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
